# spark-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/config/: download.rs
src/downloader/: chunk_downloader.rs  engine.rs  io_worker.rs  mod.rs  resume.rs  retry.rs  scheduler.rs  task.rs
src/events/: bus.rs  mod.rs  types.rs
src/io/: buffer.rs  mod.rs  sparse_file.rs
src/network/: client.rs  mod.rs  range.rs
src/progress/: indicatif.rs  mod.rs  reporter.rs
src/storage/: backend.rs  memory.rs  mod.rs  sparse_file.rs
src/types/: error.rs  mod.rs  range.rs
src/utils/: config.rs  progress.rs
